--- a/src/server/authserver/authserver.conf.dist
+++ b/src/server/authserver/authserver.conf.dist
@@ -1,5 +1,5 @@
 ###############################################
-# OpenEMU 5.4.0 Auth Server configuration file#
+# GlideCore 5.4.0.17399 Auth Server configuration file#
 ###############################################
 [authserver]
 
@@ -135,9 +135,9 @@ WrongPass.BanType = 0
 #                                                                 section my.ini)
 #                     ".;/path/to/unix_socket;username;password;database" - (use Unix sockets on
 #                                                                           Unix/Linux)
-#        Default:     "127.0.0.1;3306;openemu;openemu;auth"
+#        Default:     "127.0.0.1;3306;glide;glide;auth"
 
-LoginDatabaseInfo = "127.0.0.1;3306;openemu;openemu;auth"
+LoginDatabaseInfo = "127.0.0.1;3306;glide;glide;auth"
 
 #
 #    LoginDatabase.WorkerThreads
